Saving and Embidding

--- a/Visualization and Eda.Rmd
+++ b/Visualization and Eda.Rmd
@@ -154,3 +154,27 @@ weather_df %>%
   geom_density_ridges()
 ```
 
+##saving a plot 
+```{r}
+ggp_ridge_temp =
+  weather_df %>% 
+    ggplot(aes(x= tmax, y= name)) +
+    geom_density_ridges()
+
+ggsave("ggplot_ridge_temp.pdf")
+```
+
+##Embidding plots in R markdown
+```{r fig.width = 6}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax)) + 
+  geom_point(aes(color=name), alpha = 0.4) +
+  geom_smooth(se = FALSE)
+```
+
+```{r fig.width = 12}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax)) + 
+  geom_point(aes(color=name), alpha = 0.4) +
+  geom_smooth(se = FALSE)
+```
